--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ python = "^3.10"
 Sphinx = { version = "4.2.0", optional = true }
 sphinx-rtd-theme = { version = "1.0.0", optional = true }
 sphinxcontrib-napoleon = { version = "0.7", optional = true }
-click = "^8.1.3"
 requests = "^2.28.0"
-bs4 = "^0.0.1"
+lxml = "^4.9.1"
+beautifulsoup4 = "^4.11.1"
+types-requests = "^2.28.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^6.2.5"
 
 [tool.poetry.extras]
 docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
