--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.28.0"
 lxml = "^4.9.1"
 beautifulsoup4 = "^4.11.1"
 types-requests = "^2.28.0"
+pandas = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
